Image alt text was not being emitted in plaintext serializer because it was inadvertently moved into a method where it would never be called; moving it back. Written by Akkana, r=brade, sr=jst (bug 212177)